allowed-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-team
  labels:
    resourcegroup-allowed: "true"
