restricted-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restricted-namespace
  labels:
    resourcegroup-restricted: "true"
